# rust-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
api-boundary/: Cargo.toml
api-boundary/src/: lib.rs
client/: Cargo.toml
client/src/: api.rs  lib.rs
client/src/components/: credentials.rs  navbar.rs
client/src/pages/: btc.rs  login.rs  mod.rs  register.rs
server/: Cargo.toml
server/src/: adapters.rs  application.rs  main.rs
